# trade-executor

./: .dockerignore  .env  .gitignore  .gitmodules  .local-test.env  APIs.json  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE.txt  README-internal-share-price.md  README.md  arbitrum-btc-usd-sls-binance-data-1h.json  candle.yaml  docker-compose.yml  enzyme-polygon-matic-eth-usdc.json  example.yaml  index.html  notebook.dockerfile  open-defi-api.yaml  open-onchain-api.yaml  pyproject.toml  pytest.ini  strategy-state.json  tox.ini  trade-executor-api.yaml  visual-studio-code.dockerfile  web.yaml
.claude/: cctp-roadmap.md  settings.json
.claude/docs/: agent-tricks-and-troubleshooting.md  alpha-model.md  cctp-async-vault-accounting-plan.md  cli-command.md  deposit-cases.md  hypercore-vault.md  phase-aware-alpha-model.md  (+1 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json
backtests/: simple_ema.ipynb  synthetic_ema.ipynb
bootstraps/: pancake_8h_momentum.sh  quickswap-momentum.sh
cache/: README.md
configurations/: README.md  pancake_8h_momentum.sh  quickswap-momentum.sh
docs/: README.md  codex-cleanup-plan.md  docker.md  install.md  notebook-docker-image.md  running.md  testing.md  visual-studio-code-docker-dev-container-for-jupyter-notebooks.md
env/: README.md  local-test.env  pancake-eth-usd-sma.env  trader-joe-avax-usd-ema.env
examples/: README.md
logs/: README.md
notebooks/:  state_candles_from_live_strategy.ipynb  Clone of Open Long-only (own data) 2 x mean rev-Polygon.ipynb  TS-Meanrev-LS-EMA-ETHUSDC (2).ipynb  UniswapV3_TS_ema_v2.ipynb  analyse-failed-trades.ipynb  arbitrum-btc-usd-sls-binance-data-1h-in-sample-ma-112.ipynb  arbitrum-btc-usd-sls-binance-data-1h-out-of-sample-ma-112.ipynb  arbitrum-btc-usd-sls-binance-data-1h.ipynb  arbitrum-btc-usd-sls-binance-data-1h.json  arbitrum-btc-usd-sls-binance-data-4h.ipynb  arbitrum-btc-usd-sls-binance-data.ipynb  arbitrum-btc-usd-sls-test-version.ipynb  arbitrum-btc-usd-sls.ipynb  arbitrum-eth-usd-sls.ipynb  backtest-price-analysis.ipynb  basket.ipynb  bb-short-eth-polygon.ipynb  binance-data-shorting.ipynb  binance-data.ipynb  binance-futures-mappings.ipynb  data-quality-check.ipynb  data_test.ipynb  defi-bluechip-momentum.ipynb  ema_crossover_uniswap_v3.ipynb  enzyme-polygon-momentum.ipynb  eth-dubai-hackathon.ipynb  examine-live-strategy-quickswap.ipynb  examine-multipair-breakout.ipynb  explore-momentum.ipynb  explore-signal-grid-search-2.ipynb  explore-signal-grid-search.ipynb  explore-signal-pairs.ipynb  explore-signal-scratchpad-2.ipynb  explore-signal.ipynb  futures.ipynb  hackatom-2022-osmosis-backtest.ipynb  lending-market-summary.ipynb  long-short-momentum.ipynb  low-fee-pairs.ipynb  notebook-multiprocess.ipynb  (+27 more)
scripts/: README-profile-notebook.md  analyse-1delta-trade.py  analyse-failed-trades.ipynb  analyse-failed-trades.py.ipynb  analyse-historical-uniswap-v3-price.py  analyse-reserve.ipynb  analyse-state.ipynb  audit-hypercore-redemption-state.py  audit-redemption-state.py  check-state.py  check-webhook-status.sh  create-docker-env-with-secrets.py  create-docker-env-with-secrets.sh  deploy-base-memex.sh  derive-lagoon-test-deposit.py  docker-entrypoint.sh  docker-smoke-test.py  examine-state.py  figure_out_memory_leaks.py  generate-private-key.py  load_binance_candlestick_data.py  manual-ostium-v15-test-trade.py  manual-test-1delta-short.py  manual-visualisation-test.py  multiprocess_hang_test.py  patch-claude-code.sh  prepare-env.py  prepare-new-docker.sh  prepare-polygon-momentum-candles.py  prepare-polygon-uniswap-v3-dataset.py  profile_backtest.py  profile_notebook_73_hlp_modes.py  profile_notebook_cells.py  profile_vault_of_vaults_notebook.py  release.sh  run-hypercore-account-checks-sample-state.sh  set-latest-tag.sh  set-pre-commit-checkfilesize.sh  set-up-examples.sh  show-pancake-info.py  (+3 more)
state/: README.md
strategies/: arbitrum-btc-usdc-sls.py  avax_usdc.py  base-memex.py  bnb_chain_16h_momentum.py  bnb_chain_momentum_16h.py  defi-bluechip-momentum.py  ema-crossover-long-only-no-stop-loss.py  ema_crossover_long_only_no_stop_loss.py  enzyme-polygon-matic-usdc-cleaned-up.py  enzyme-polygon-matic-usdc-old.py  eth-breakout-atr-1h-aave.py  eth-breakout-atr-1h.py  eth-btc-usdc-credit.py  eth-btc-usdc-low-fee.py  eth-btc-usdc-size-risk.py  eth-btc-usdc.py  gmx-ai.py  hyper-ai-v2.py  hyper-ai.py  long-short-momentum.py  master-chain-multichain.py  master-vault.py  matic-breakout.py  matic-eth-usdc-long-backtest.py  matic-eth-usdc.py  matic-usd-ema.py  matic_usdc.py  pancake-eth-usd-sma.py  pancake-eth-usdc-sma.py  pancake-momentum-v2.py  pancake_8h_momentum.py  pancake_8h_momentum_tick.py  pancakeswap_v2_momentum.py  pool_1_hourly_candles.parquet  premium-harvest.py  quickswap-dummy.py  quickswap-matic-usd-ema.py  quickswap-momentum.py  quickswap_momentum.py  spot-and-short-momentum-4.py  (+7 more)
tests/: binance-BTCUSDT-1h.parquet  conftest.py  legacy-repair-dump.json  test_alternative_market_data.py  test_approval_in_terminal.py  test_backtest_ema_crossover.py  test_backtest_execution.py  test_backtest_execution_three_way.py  test_backtest_inline.py  test_backtest_inline_real_data.py  test_backtest_inline_synthetic_data.py  test_backtest_position_trigger.py  test_backtest_result_visualisation.py  test_backtest_router.py  test_backtest_synthetic_data.py  test_binance_data.py  test_binance_futures.py  test_capped_waterfall_notebook.py  test_capped_waterfall_phase_aware_notebook.py  test_cctp_in_transit_status.py  test_cli_approval.py  test_cli_approve_trades.py  test_cli_commands.py  test_data_age.py  test_decision_trigger.py  test_default_routes.py  test_default_supported_routers.py  test_dummy_execution.py  test_dummy_strategy.py  test_equity_curve.py  test_ethereum_tester_trade.py  test_execute_trade_uniswap.py  test_execute_trade_uniswap_v3.py  test_execution_context.py  test_execution_sequencing.py  test_execution_state.py  test_forked_bnb_chain_pancake.py  test_forked_mainnet_pancake.py  test_freqtrade_position_state.py  test_freqtrade_pricing.py  (+61 more)
tradeexecutor/: __init__.py
(+1257 files in other folders)
