[tool.poetry]
authors = ["Mikko Ohtamaa <mikko@tradingstrategy.ai>"]
description = "Algorithmic trading backtesting and live trading engine for decentralised finance"
homepage = "https://tradingstrategy.ai"
keywords = ["algorithmic trading", "ethereum", "cryptocurrency", "uniswap", "quantitative finance", "binance", "coinbase", "pancakeswap"]
license = "APGL"
name = "trade-executor"
packages = [
  {include = "tradeexecutor"},
]
readme = "README.md"
repository = "https://github.com/tradingstrategy-ai/trade-executor"
version = "0.3.2"
[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Use these during development
# TODO: FileLock, Parquet None issueset
trading-strategy = {path = "deps/trading-strategy", develop = true}
# trading-strategy = "^0.22.6"
jupyterlab = "^4.0.7"
matplotlib = ">=3.5"
pandas = "<3"
requests = "^2.27.1"
# https://github.com/tradingstrategy-ai/trade-executor/commit/52c5e9b1597c8f74ec2535b564f3b4d178780590
ft-pandas-ta = "^0.3.15"
numpy = "<3"
tqdm-loggable = "^0.2"

web3-ethereum-defi = {path = "deps/web3-ethereum-defi", develop = true, extras = ["data", "test", "web3v6"]}

# Freqtrade integration for CEX trading strategies
freqtrade = {path = "../freqtrade", develop = true}

# AttributeError: 'MathBlockParser' object has no attribute 'parse_axt_heading'
# https://github.com/lepture/mistune/issues/403
# https://github.com/jupyter/nbconvert/issues/2198
mistune = "<3.1"

#
# Execution deps
#
typer = {version = "^0.12.3", optional = true}
# Bug, breaks --help
# https://github.com/ai-dynamo/dynamo/issues/1039
APScheduler = {version = "^3.9.1"}
click = {version = "<8.2.0", optional = true}
colorama = {version = "^0.4.4", optional = true}
coloredlogs = {version = "^15.0.1", optional = true}
prompt-toolkit = {version = "^3.0.31", optional = true}
#python-logstash-tradingstrategy = {version="^0.5.0", optional = true}
beautifulsoup4 = {version = "^4.12.2", optional = true}# Needed to export HTML reports
kaleido = {version = "^1.0.0rc13"}
python-dotenv = {version = "^0.21.0", optional = true}
python-logging-discord-handler = {version = "^0.1.3", optional = true}
python-logstash-tradingstrategy = "0.5.2"

#
# Web server deps
#
WebTest = {version = "^3.0.0", optional = true}
pyramid = {version = "^2.0", optional = true}
pyramid-openapi3 = "0.20.1"
waitress = {version = "^2.0.0", optional = true}
# python-openapi3 incompatible with newer versions
# openapi-core = {version = "<0.17", optional = true}

#
# Legacy strategy deps
#
trading-strategy-qstrader = {version = "^0.5", optional = true}

#
# quantstats package for generating
# advanced statistical reports
#
quantstats = {version = "^0.0.62"}

# https://github.com/polakowo/vectorbt/issues/779
# File ~/Library/Caches/pypoetry/virtualenvs/trade-executor-kk5ZLC7w-py3.11/lib/python3.11/site-packages/quantstats/utils.py:300, in _in_notebook(matplotlib_inline)
#    297 if shell == "ZMQInteractiveShell":
#    298     # Jupyter notebook or qtconsole
#    299     if matplotlib_inline:
#--> 300         get_ipython().magic("matplotlib inline")
ipython = "<8"
lxml = "^5.3"

# Needed for Plotly Express scatter(trendline="ols)
# https://www.statsmodels.org/stable/index.html
statsmodels = {version = "^0.14.0"}

#
# This package is to be used in various environemnts
# - Execution oracles (makes trades)
# - Client side Python within a browser
# - Web server
#
# Note: in the future execution may exist without a web server,
# e.g. in-browser  bots.
#
cloudpickle = "^3.0.0"
scikit-optimize = "^0.10.2"
tblib = "^1.7.0"
tqdm = "^4.64.1"

#
# Demeter
# https://github.com/zelos-alpha/demeter
#

# TODO: Disabled. Install wiht pip until dependency version incompatibilies are solved.
zelos-demeter = {version = "^0.7.4", optional = true}

# https://github.com/arynyklas/telegram_bot_logger/pull/1
brotli = "^1.1.0"
openapi-core = "0.19.1"
sentry-sdk = {version = "^2.29.1", optional = true}
telegram-bot-logger = {git = "https://github.com/tradingstrategy-ai/telegram_bot_logger.git", branch = "main", optional = true}

# CCXT for reading CEX exchange account balances (Aster, Binance, Bybit, OKX, etc.)
ccxt = {version = "^4.5.16", optional = true}

[tool.poetry.extras]

# Legacy strats
qstrader = ["trading-strategy-qstrader"]

# Only needed when running live trades
execution = [
  "python-logging-discord-handler",
  "telegram-bot-logger",
  "python-logstash-tradingstrategy",
  "typer",
  "click",
  "colorama",
  "coloredlogs",
  "prompt-toolkit",
  "python-dotenv",
  "setuptools",
  "beautifulsoup4",
  "web3-ethereum-defi",
  "sentry-sdk",
]

# These dependencies are not neededon the client side code
web-server = [
  "pyramid",
  "WebTest",
  "openapi-core",
  "pyramid-openapi3",
  "waitress",
]
# for generating advanced statistical reports
# quantstats = ["quantstats"]

# Demeter LP backtesting integration
demeter = [
  "zelos-demeter",
]

# CCXT for reading CEX exchange account balances
ccxt = ["ccxt"]

[tool.poetry.group.dev.dependencies]
flaky = "^3.7.0"
ipdb = "^0.13.9"
pytest = "^7.2.2"
pytest-mock = "^3.11.1"
pytest-reverse = "^1.5.0"
pytest-timeout = "^2.3.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
get-latest-release = 'tradeexecutor.cli.latest_release:main'
prepare-docker-env = 'tradeexecutor.cli.prepare_docker_env:main'
trade-executor = 'tradeexecutor.cli.main:app'

[tool.pytest.ini_options]
addopts = "-s --tb=native"
testpaths = [
  "tests",
]

# TODO: This does not seem to work anymore
# Do not let pytest to crawl into deps/ subprojects
# that contain tests and are independent from us
# https://stackoverflow.com/a/58306308/315168
norecursedirs = "deps/*"

filterwarnings = [
  # python_openapi complaint
  "ignore:::.*.jsonschema", # DeprecationWarning: Subclassing validator classes is not intended to be part of their public API. A future version will make doing so an error, as the behavior of subclasses isn't guaranteed to stay the same between releases of jsonschema. Instead, prefer composition of validators, wrapping them in an object owned entirely by the downstream library.
  "ignore:::.*.validators",
  "ignore:::.*.codec",
  "ignore::DeprecationWarning:openapi_spec_validator.*:", #  DeprecationWarning: abi.decode_single() is deprecated and will be removed in version 4.0.0 in favor of abi.decode()
  "ignore::DeprecationWarning:eth_abi.*:",
  "ignore::DeprecationWarning:eth_tester.*:",
  "ignore::DeprecationWarning:pandas.*:",
  "ignore::DeprecationWarning:quantstats.*:",
  "ignore::DeprecationWarning:pkg_resources.*:",
]
markers = [
  "slow_test_group: manually separated group of tests that take individually long time to run",
]
